--- a/webpage/client/package.json
+++ b/webpage/client/package.json
@@ -15,9 +15,12 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-multi-carousel": "^2.8.4",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
