--- a/webpage/server/package.json
+++ b/webpage/server/package.json
@@ -18,6 +18,10 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22",
+    "react-router-dom": "^6.13.0",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
 }
