--- a/webpage/client/package.json
+++ b/webpage/client/package.json
@@ -8,8 +8,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
+    "antd": "^5.6.2",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
