--- a/webpage/server/package.json
+++ b/webpage/server/package.json
@@ -16,8 +16,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mammoth": "^1.6.0",
     "mongoose": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "officegen": "^0.6.5",
+    "randomstring": "^1.3.0",
     "react-router-dom": "^6.13.0",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2",
