--- a/webpage/client/package.json
+++ b/webpage/client/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.13.1",
     "antd": "^5.6.2",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
     "quill": "^1.3.7",
