--- a/webpage/client/package.json
+++ b/webpage/client/package.json
@@ -16,6 +16,7 @@
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-katex": "^3.0.1",
     "react-markdown": "^8.0.7",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.13.0",
