--- a/webpage/client/package.json
+++ b/webpage/client/package.json
@@ -10,9 +10,14 @@
     "@mui/material": "^5.13.1",
     "antd": "^5.6.2",
     "axios": "^1.4.0",
+    "better-react-mathjax": "^2.0.2",
     "bootstrap": "^5.3.0",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
+    "katex": "^0.16.8",
+    "latex.js": "^0.12.6",
+    "mathjax": "^3.2.2",
+    "mathjax-react": "^2.0.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +27,9 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-katex": "^6.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2",
     "uuid": "^9.0.0"
