--- a/webpage/server/package.json
+++ b/webpage/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -20,6 +21,8 @@
     "markdown-pdf": "^11.0.0",
     "mongoose": "^7.2.0",
     "multer": "^1.4.5-lts.1",
+    "node-latex": "^3.1.0",
+    "node-pdflatex": "^0.3.0",
     "nodemon": "^2.0.22",
     "officegen": "^0.6.5",
     "randomstring": "^1.3.0",
