--- a/webpage/client/package.json
+++ b/webpage/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "antd": "^5.6.2",
